--- a/main.html
+++ b/main.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
-
-<html>
-
-<head>
-	<link rel="stylesheet" href="styles.css">
-</head>
-
-<body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
-</body>
-
-</html>
+<html lang="en">
+	<head>
+	    <meta charset="UTF-8">
+	    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	    <title>Testimonials</title>
+	    <link rel="Stylesheet" href="styles.css" />
+	</head>
+	<body>
+		<div class="container">
+	    <h1>Testimonials</h1>
+	    <div class="testimonial">
+	            <p>The product is amazing! I highly recommend it to anyone in need of a solution like this.</p>
+	            <h6 class="author">-John Doe</h6>
+	        </div>
+	<br/>
+	        <div class="testimonial">
+	            <p>I have been using this for a week now and it has completely transformed my workflow.</p>
+	            <h6 class="author">-Jane Smith</h6>
+	        </div>
+	    </div>
+	</body>
